# rtems_zynq_demo

./: LICENSE  README.md
app/cmake/: pre_main.c  rtems.spec.in  toolchain.cmake.in
app/dbg/: pynq.cfg
app/src/: CMakeLists.txt
app/src/main/: main.cpp  pre_main.c
app/vscode_template/: c_cpp_properties.json  cmake-kits.json  launch.json  settings.json  tasks.json
dts/: picozed-zynq7.dtb  picozed-zynq7.dts  zynq-7000.dtsi
scripts/: 1_3_0_install_tools.sh  2_1_0_build_hardware.sh  2_1_1_build_fsbl.sh  2_1_2_build_boot_file.sh  3_0_0_build_rtems_libbsd.sh  3_1_0_build_rtems_libbsd.sh  3_2_1_create_toolchain_file.sh  3_4_0_create_vs_code_folder.sh  4_0_0_create_toolchain_file.sh
scripts/config/: config.sh
vscode_template/: launch.json
