cmake_minimum_required(VERSION 3.18.4)
project(ZynqDemo)


set(CMAKE_EXE_LINKER_FLAGS ""  CACHE INTERNAL "exe link flags" FORCE)
set(CMAKE_C_FLAGS_RELEASE ""  CACHE INTERNAL "c flags" FORCE)
set(CMAKE_CXX_FLAGS_RELEASE ""  CACHE INTERNAL "c++ flags" FORCE)
set(CMAKE_C_FLAGS_DEBUG ""  CACHE INTERNAL "c flags" FORCE)
set(CMAKE_CXX_FLAGS_DEBUG ""  CACHE INTERNAL "c++ flags" FORCE)
set(CMAKE_C_FLAGS ""  CACHE INTERNAL "c flags" FORCE)
set(CMAKE_CXX_FLAGS ""  CACHE INTERNAL "c++ flags" FORCE)


add_executable(${PROJECT_NAME} 
  ${CMAKE_CURRENT_LIST_DIR}/main/main.cpp
  ${CMAKE_CURRENT_LIST_DIR}/main/pre_main.c
)

set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS ${RTEMS_CMAKE_APPLICATION_EXE_LINKER_FLAGS})
set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 14)
target_compile_options(${PROJECT_NAME} 
  PUBLIC
  $<$<COMPILE_LANGUAGE:CXX>:$<$<CONFIG:Debug>:SHELL:${RTEMS_CMAKE_APPLICATION_CXX_FLAGS_DEBUG}>>
  $<$<COMPILE_LANGUAGE:CXX>:$<$<CONFIG:Release>:SHELL:${RTEMS_CMAKE_APPLICATION_CXX_FLAGS_RELEASE}>>
  $<$<COMPILE_LANGUAGE:CXX>:$<$<CONFIG:RelWithDebInfo>:SHELL:${RTEMS_CMAKE_APPLICATION_CXX_FLAGS_RELWITHDEBINFO}>>
  $<$<COMPILE_LANGUAGE:CXX>:$<$<CONFIG:MinSizeRel>:SHELL:${RTEMS_CMAKE_APPLICATION_CXX_FLAGS_MINSIZEREL}>>
  $<$<COMPILE_LANGUAGE:C>:$<$<CONFIG:Debug>:SHELL:${RTEMS_CMAKE_APPLICATION_C_FLAGS_DEBUG}>>
  $<$<COMPILE_LANGUAGE:C>:$<$<CONFIG:Release>:SHELL:${RTEMS_CMAKE_APPLICATION_C_FLAGS_RELEASE}>>
  $<$<COMPILE_LANGUAGE:C>:$<$<CONFIG:RelWithDebInfo>:SHELL:${RTEMS_CMAKE_APPLICATION_C_FLAGS_RELWITHDEBINFO}>>
  $<$<COMPILE_LANGUAGE:C>:$<$<CONFIG:MinSizeRel>:SHELL:${RTEMS_CMAKE_APPLICATION_C_FLAGS_MINSIZEREL}>>
)



set(CMAKE_VERBOSE_MAKEFILE on)
set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_BINARY_DIR}/../install)
set(CMAKE_EXECUTABLE_SUFFIX ".elf")


install(DIRECTORY $<TARGET_FILE:${PROJECT_NAME}> DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
